--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,6 +8,7 @@ commands:
       - run:
           name: Run Build Script
           command: |
+            apt-get update
             apt-get install --yes wget
             chmod +x ./build.sh
             ./build.sh
