--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,8 @@ commands:
           command: |
             apt-get update
             apt-get install --yes wget
+            apt-get install --yes make
+            apt-get install --yes build-essential
             chmod +x ./build.sh
             ./build.sh
 jobs:
