--- a/DIO_Abstraction/makefile
+++ b/DIO_Abstraction/makefile
@@ -57,10 +57,10 @@ RM = /usr/bin/cmake -E rm -f
 EQUALS = =
 
 # The top-level source directory on which CMake was run.
-CMAKE_SOURCE_DIR = "/CircleCI/DIO_Abstraction"
+CMAKE_SOURCE_DIR = "/mnt/c/Users/ASUS/OneDrive/Máy tính/test/CircleCI/DIO_Abstraction"
 
 # The top-level build directory on which CMake was run.
-CMAKE_BINARY_DIR = "/CircleCI/DIO_Abstraction"
+CMAKE_BINARY_DIR = "/mnt/c/Users/ASUS/OneDrive/Máy tính/test/CircleCI/DIO_Abstraction"
 
 #=============================================================================
 # Targets provided globally by CMake.
@@ -87,9 +87,9 @@ rebuild_cache/fast: rebuild_cache
 
 # The main all target
 all: cmake_check_build_system
-	$(CMAKE_COMMAND) -E cmake_progress_start "/CircleCI/DIO_Abstraction/CMakeFiles" "/CircleCI/DIO_Abstraction//CMakeFiles/progress.marks"
+	$(CMAKE_COMMAND) -E cmake_progress_start "/mnt/c/Users/ASUS/OneDrive/Máy tính/test/CircleCI/DIO_Abstraction/CMakeFiles" "/mnt/c/Users/ASUS/OneDrive/Máy tính/test/CircleCI/DIO_Abstraction//CMakeFiles/progress.marks"
 	$(MAKE) $(MAKESILENT) -f CMakeFiles/Makefile2 all
-	$(CMAKE_COMMAND) -E cmake_progress_start "/CircleCI/DIO_Abstraction/CMakeFiles" 0
+	$(CMAKE_COMMAND) -E cmake_progress_start "/mnt/c/Users/ASUS/OneDrive/Máy tính/test/CircleCI/DIO_Abstraction/CMakeFiles" 0
 .PHONY : all
 
 # The main clean target
