--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
   build_and_save:
     working_directory: ~/CircleCI
     docker:
-      - image: nhoklankan7/stm32cubeide
+      - image: ubuntu
     steps:
       - build_and_save
 workflows:
