--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,17 @@ commands:
           command: |
             chmod +x ./build.sh
             ./build.sh
+      - run:
+          name: Creating Dummy Artifacts
+          command: |
+            echo "my artifact file" > /DIO_Abstraction/art-1;
+            mkdir /tmp/artifacts;
+            echo "my artifact files in a dir" > /DIO_Abstraction/artifacts/art-2;
+      - store_artifacts:
+          path: /DIO_Abstraction/art-1
+          destination: artifact-file
+      - store_artifacts:
+          path: /DIO_Abstraction/artifacts
 jobs:
   build_and_save:
     working_directory: ~/CircleCI
