--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,14 +13,14 @@ commands:
       - run:
           name: Creating Dummy Artifacts
           command: |
-            echo "my artifact file" > /DIO_Abstraction/art-1;
+            echo "my artifact file" > /tmp/art-1;
             mkdir /tmp/artifacts;
-            echo "my artifact files in a dir" > /DIO_Abstraction/artifacts/art-2;
+            echo "my artifact files in a dir" > /tmp/artifacts/art-2;
       - store_artifacts:
-          path: /DIO_Abstraction/art-1
+          path: /tmp/art-1
           destination: artifact-file
       - store_artifacts:
-          path: /DIO_Abstraction/artifacts
+          path: /tmp/artifacts
 jobs:
   build_and_save:
     working_directory: ~/CircleCI
