--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,14 +13,14 @@ commands:
       - run:
           name: Creating Dummy Artifacts
           command: |
-            echo "my artifact file" > /tmp/art-1;
-            mkdir /tmp/artifacts;
-            echo "my artifact files in a dir" > /tmp/artifacts/art-2;
+            echo "my artifact file" > ~/CircleCI/art-1;
+            mkdir ~/CircleCI/artifacts;
+            echo "my artifact files in a dir" > ~/CircleCI/artifacts/art-2;
       - store_artifacts:
-          path: /tmp/art-1
+          path: ~/CircleCI/art-1
           destination: artifact-file
       - store_artifacts:
-          path: /tmp/artifacts
+          path: ~/CircleCI/artifacts
 jobs:
   build_and_save:
     working_directory: ~/CircleCI
