--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,24 @@
 version: 2.1
-commands:
+jobs:
+  build:
+    working_directory: /tmp
+    steps:
+      - run:
+          name: Creating Dummy Artifacts
+          command: |
+            echo "my artifact file" > /tmp/art-1;
+            mkdir /tmp/artifacts;
+            echo "my artifact files in a dir" > /tmp/artifacts/art-2;
+      - store_artifacts:
+          path: /tmp/art-1
+          destination: artifact-file
+      - store_artifacts:
+          path: /tmp/artifacts
+
   build_and_save:
-    description: build stm32
+    working_directory: ~/CircleCI
+    docker:
+      - image: nhoklankan7/stm32cubeide
     steps:
       - checkout:
           path: ~/CircleCI
@@ -13,23 +30,17 @@ commands:
       - run:
           name: Creating Dummy Artifacts
           command: |
-            echo "my artifact file" > ~/CircleCI/art-1;
-            mkdir ~/CircleCI/artifacts;
-            echo "my artifact files in a dir" > ~/CircleCI/artifacts/art-2;
+            echo "my artifact file" > /tmp/art-1;
+            mkdir /tmp/artifacts;
+            echo "my artifact files in a dir" > /tmp/artifacts/art-2;
       - store_artifacts:
-          path: ~/CircleCI/art-1
+          path: /tmp/art-1
           destination: artifact-file
       - store_artifacts:
-          path: ~/CircleCI/artifacts
-jobs:
-  build_and_save:
-    working_directory: ~/CircleCI
-    docker:
-      - image: nhoklankan7/stm32cubeide
-    steps:
-      - build_and_save
+          path: /tmp/artifacts
+
 workflows:
   build_and_save:
     jobs:
+      - build
       - build_and_save
-      
