--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,12 +3,11 @@ jobs:
   build:
     working_directory: /tmp
     steps:
-      - run:
-          name: Creating Dummy Artifacts
-          command: |
-            echo "my artifact file" > /tmp/art-1;
-            mkdir /tmp/artifacts;
-            echo "my artifact files in a dir" > /tmp/artifacts/art-2;
+      - name: Creating Dummy Artifacts
+        command: |
+          echo "my artifact file" > /tmp/art-1;
+          mkdir /tmp/artifacts;
+          echo "my artifact files in a dir" > /tmp/artifacts/art-2;
       - store_artifacts:
           path: /tmp/art-1
           destination: artifact-file
@@ -20,19 +19,17 @@ jobs:
     docker:
       - image: nhoklankan7/stm32cubeide
     steps:
-      - checkout:
-          path: ~/CircleCI
+      - checkout
       - run:
           name: Run Build Script
           command: |
             chmod +x ./build.sh
             ./build.sh
-      - run:
-          name: Creating Dummy Artifacts
-          command: |
-            echo "my artifact file" > /tmp/art-1;
-            mkdir /tmp/artifacts;
-            echo "my artifact files in a dir" > /tmp/artifacts/art-2;
+      - name: Creating Dummy Artifacts
+        command: |
+          echo "my artifact file" > /tmp/art-1;
+          mkdir /tmp/artifacts;
+          echo "my artifact files in a dir" > /tmp/artifacts/art-2;
       - store_artifacts:
           path: /tmp/art-1
           destination: artifact-file
@@ -40,6 +37,7 @@ jobs:
           path: /tmp/artifacts
 
 workflows:
+  version: 2
   build_and_save:
     jobs:
       - build
