--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,44 +1,37 @@
 version: 2.1
-jobs:
-  build:
-    working_directory: /tmp
-    steps:
-      - name: Creating Dummy Artifacts
-        command: |
-          echo "my artifact file" > /tmp/art-1;
-          mkdir /tmp/artifacts;
-          echo "my artifact files in a dir" > /tmp/artifacts/art-2;
-      - store_artifacts:
-          path: /tmp/art-1
-          destination: artifact-file
-      - store_artifacts:
-          path: /tmp/artifacts
-
+commands:
   build_and_save:
-    working_directory: ~/CircleCI
-    docker:
-      - image: nhoklankan7/stm32cubeide
+    description: build stm32
     steps:
-      - checkout
+      - checkout:
+          path: ~/CircleCI
       - run:
           name: Run Build Script
           command: |
             chmod +x ./build.sh
             ./build.sh
-      - name: Creating Dummy Artifacts
+  build:
+  working_directory: /tmp
+  steps:
+    - run:
+        name: Creating Dummy Artifacts
         command: |
           echo "my artifact file" > /tmp/art-1;
           mkdir /tmp/artifacts;
           echo "my artifact files in a dir" > /tmp/artifacts/art-2;
-      - store_artifacts:
-          path: /tmp/art-1
-          destination: artifact-file
-      - store_artifacts:
-          path: /tmp/artifacts
-
+    - store_artifacts:
+        path: /tmp/art-1
+        destination: artifact-file
+    - store_artifacts:
+        path: /tmp/artifacts
+jobs:
+  build_and_save:
+    working_directory: ~/CircleCI
+    docker:
+      - image: nhoklankan7/stm32cubeide
+    steps:
+      - build_and_save
 workflows:
-  version: 2
   build_and_save:
     jobs:
-      - build
       - build_and_save
