--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,7 +31,9 @@ jobs:
       - image: nhoklankan7/stm32cubeide
     steps:
       - build_and_save
+      - build
 workflows:
   build_and_save:
     jobs:
       - build_and_save
+      - build
