--- a/DIO_Abstraction/CMakeLists.txt
+++ b/DIO_Abstraction/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(PRJ_NAME CLion_STM_LED)
+set(PRJ_NAME STM32CubeIDE)
 set(MCU_FAMILY STM32F1xx)
 set(MCU_LINE STM32F103xB)
 set(MCU_LINKER_SCRIPT STM32F103C8TX_FLASH.ld)
